--- a/email-sender/src/main/resources/application.properties
+++ b/email-sender/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=email-sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=irshadvmc@gmail.com
-spring.mail.password=aasc rrre nthw skya
+spring.mail.username=your_gmail.com
+spring.mail.password=your app passowrd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
